buildscript {
    ext {
        springBootVersion = '4.1.1'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
    }
}

plugins {
    id("java-library") // or id("application")
}

tasks.withType(Jar).configureEach { setDuplicatesStrategy(DuplicatesStrategy.EXCLUDE) }

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'jacoco'

repositories {
    mavenCentral()
}

configurations {
    // We're using HikariCP instead
    implementation.exclude module: "tomcat-jdbc"
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation platform('com.google.cloud:libraries-bom:26.88.0')
    implementation 'com.google.cloud:google-cloud-logging-logback'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'

    //TEMP APPLICATION PROPERTIES HELPER
    runtimeOnly 'org.springframework.boot:spring-boot-properties-migrator'

    implementation "be.woutschoovaerts:mollie:4.6.4"

    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    implementation 'com.google.guava:guava:33.7.1-jre'
    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'org.apache.commons:commons-lang3'
    implementation 'org.apache.httpcomponents:httpclient'
    implementation 'com.google.zxing:core:3.5.4'
    implementation 'com.google.zxing:javase:3.5.4'

    implementation 'org.webjars.bowergithub.wisvch:bootstrap-theme:4.6.1-3'
    implementation 'org.webjars:sprintf.js:1.0.0'
    implementation 'org.webjars:font-awesome:7.3.0'
    implementation 'org.webjars.npm:flatpickr:4.6.13'
    implementation 'org.webjars.npm:trumbowyg:2.31.0'

    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'org.projectlombok:lombok:1.18.48'

    annotationProcessor 'org.projectlombok:lombok:1.18.48'

    implementation "com.googlecode.json-simple:json-simple:1.1.1"
    runtimeOnly 'org.hsqldb:hsqldb'
    runtimeOnly 'org.postgresql:postgresql'

    implementation 'org.fluttercode.datafactory:datafactory:0.8'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'

    implementation 'org.javatuples:javatuples:1.2'

    implementation 'com.auth0:java-jwt:4.6.0'
    implementation 'com.google.api-client:google-api-client:2.9.1'
    implementation 'com.google.apis:google-api-services-walletobjects:v1-rev20260806-2.0.0'
}

test {
    maxHeapSize = "4096m"
}
